--- a/Stressdetector_student_version.ipynb
+++ b/Stressdetector_student_version.ipynb
@@ -14,7 +14,7 @@
     "# Selecting sensors for a stress detection wearable device\n",
     "\n",
     "_Version 1.0_  \n",
-    "_Author(s): Jon Reifschneider_"
+    "_Author(s): Jon Reifschneider, Duke University Pratt School of Engineering_"
    ]
   },
   {
